v1.5.0 - [fix] 【重要升级提示】Redis消息队列支持redis集群，原来当消息队列的3个key被分布到不同的slot时会导致消息队列失败
                升级后，原来的topic会被变成{topic}，请手工将老的topic数据复制到{topic}下，或保留老消费者等待原topic消息消费完
       - [enhance] @Synchronized和@RateLimit支持设置自定义异常消息
       - [enhance] 优化日志输出

2024年4月4日
v1.4.3 - [add] getAutoIncrementId增加批量获取自增id的方法

2024年3月14日
v1.4.2 - [fix] 修复当消息队列消费者处理时长超过ackTimeout时长时，消息没有正常被清理的问题
       - [enhance] 消息队列的默认ackTimeout由30秒改成3600秒，该数值推荐由发送者和消费者估算指定

2024年2月6日
v1.4.1 - [enhance] 设置分布式锁的看门狗续锁线程的优先级为10(最高)
       - [enhance] 当续锁时锁已不存在时，尝试重新加回锁

2024年2月4日
v1.4.0 - [enhance] 支持jedis 4.x 5.x，也即支持spring boot 3+
       - [del] 删除getKeys、getStrings、getObject方法
       - [enhance] 默认最大连接数由128改为200，默认刷新分布式锁的线程数上限由200改为100

2023年9月4日
v1.3.2 - [enhance] 当分布式锁自动续锁总耗时超过3秒时，自动加大线程池线程数量以减少耗时

2023年8月19日
v1.3.1 - [add] 支持以注解@RateLimit的方式使用限频器
       - [enhance] 优化getAutoIncrementId方法的性能
       - [modify] 【升级提示】NoJedisConnectionException和NotGetLockException移动到exception包下

2023年6月13日
v1.3.0 - [add] 支持分布式锁选择是否可重入
       - [enhance] 【升级提示】【重要】@Synchronized的throwExceptionIfNotGetLock值默认由false改为true，获取不到锁时将默认抛出异常
                                      升级时请注意捕获并处理NotGetLockException异常
       - [enhance] HiSpeedCache的cacheNullValue属性默认由true改成false，默认不缓存null值，原因是认为null值很可能是异常值，不应该缓存
                   对于没有缓存null值所代理的可能的缓存击穿的问题，请自行判断后开启缓存null值来解决
       - [add] 将分布式的加锁者信息放到redis中，方便查看当前锁的持有者
       - [add] 增加通过HiSpeedContext控制尝试进行强制刷新，但如果失败了就走缓存

2023年6月6日
v1.2.7 - [enhance] 设置HiSpeedCacheAspect切面的优先级为1000，RedisSyncAspect优先级为2000，高速缓存的优先级必须高于分布式锁。
                   原因：1) 走缓存时不需要对目标方法加分布式锁；2) 高速缓存刷新时需要加分布式锁；
       - [enhance] 当使用redis作为高速缓存的存储时，将缓存时长设置为超时时间的2倍，而不是最长保留时长continueFetchSecond
       - [add] HiSpeedCache支持通过cacheConditionScript配置是否走缓存
       - [del] 移除fastclone组件，现在jackson的耗时从之前1.5秒降到450ms，fastclone是140ms，从10倍降到3倍，不需要用fastclone了
       - [enhance] 提供自定义clone接口，可以由用户手工实现，性能可以由jackson的450ms降到30ms，比fastclone快4倍

2023年5月25日
v1.2.6 - [enhance] 初始化@Synchronized和@HiSpeedCache后，打印初始化耗时